[gd_scene load_steps=7 format=2]

[ext_resource path="res://EGControl.gd" type="Script" id=1]
[ext_resource path="res://spelunkid_font.tres" type="BitmapFont" id=2]
[ext_resource path="res://FixedFreq.gd" type="Script" id=3]
[ext_resource path="res://gfx/ui/NoteFont.tres" type="BitmapFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="GDScript" id=2]
script/source = "extends VSlider


func _on_Slider_gui_input(event):
	if event is InputEventMouseButton and !event.pressed:
		if abs(value) < 4:  value = 0

"

[node name="PitchControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -658.0
margin_bottom = -386.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FixedFreq" type="VBoxContainer" parent="H" groups=[
"setting_group",
]]
margin_right = 88.0
margin_bottom = 214.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="FixedFreq" type="Label" parent="H/FixedFreq"]
margin_right = 88.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "
 Fixed
 Frequency:"
valign = 3

[node name="chkFixed" type="CheckButton" parent="H/FixedFreq"]
margin_top = 34.0
margin_right = 88.0
margin_bottom = 74.0

[node name="Separator" type="Panel" parent="H/FixedFreq"]
margin_top = 78.0
margin_right = 88.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blanker2" type="Panel" parent="H/FixedFreq"]
margin_top = 83.0
margin_right = 88.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl2" type="Label" parent="H/FixedFreq"]
margin_top = 95.0
margin_right = 88.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = " Base Hz:"

[node name="txtHz" type="SpinBox" parent="H/FixedFreq"]
margin_top = 107.0
margin_right = 88.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 20 )
max_value = 22050.0
exp_edit = true
allow_greater = true
align = 1
suffix = "Hz"

[node name="Blanker" type="Panel" parent="H/FixedFreq"]
margin_top = 135.0
margin_right = 88.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl" type="Label" parent="H/FixedFreq"]
margin_top = 147.0
margin_right = 88.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 2 )
text = "Presets:"
align = 1

[node name="Presets" type="OptionButton" parent="H/FixedFreq"]
margin_top = 159.0
margin_right = 88.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 4 )
text = "A-4"

[node name="Slider" type="VSlider" parent="H/FixedFreq"]
visible = false
margin_top = 56.0
margin_right = 88.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -200.0
max_value = 200.0
tick_count = 21
ticks_on_borders = true
script = SubResource( 2 )

[node name="Val" type="Label" parent="H/FixedFreq"]
visible = false
margin_top = 56.0
margin_right = 88.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 2

[node name="Mul" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 92.0
margin_right = 180.0
margin_bottom = 214.0
size_flags_horizontal = 3

[node name="MUL" type="Label" parent="H/Mul"]
margin_right = 88.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
text = "Multiplier"
align = 1

[node name="Slider" type="VSlider" parent="H/Mul"]
margin_top = 12.0
margin_right = 88.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 16.0
step = 0.5
tick_count = 17
ticks_on_borders = true

[node name="Val" type="Label" parent="H/Mul"]
margin_top = 206.0
margin_right = 88.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 2

[node name="Dt2" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 184.0
margin_right = 272.0
margin_bottom = 214.0
size_flags_horizontal = 3

[node name="DT2" type="Label" parent="H/Dt2"]
margin_right = 88.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
text = "Semitone"
align = 1

[node name="Slider" type="VSlider" parent="H/Dt2"]
margin_top = 12.0
margin_right = 88.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -12.0
max_value = 12.0
tick_count = 13
ticks_on_borders = true

[node name="Val" type="Label" parent="H/Dt2"]
margin_top = 206.0
margin_right = 88.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 2

[node name="Dt" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 276.0
margin_right = 366.0
margin_bottom = 214.0
size_flags_horizontal = 3

[node name="DT" type="Label" parent="H/Dt"]
margin_right = 90.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
text = "Detune"
align = 1

[node name="Slider" type="VSlider" parent="H/Dt"]
margin_top = 12.0
margin_right = 90.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -200.0
max_value = 200.0
tick_count = 21
ticks_on_borders = true
script = SubResource( 2 )

[node name="Val" type="Label" parent="H/Dt"]
margin_top = 206.0
margin_right = 90.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 2

[node name="Label" type="Label" parent="."]
margin_left = 447.243
margin_top = 26.3861
margin_right = 700.243
margin_bottom = 108.386
text = "TODO:
LFO Depth,
Freq slide time
Freq slide amount (Semitones per sec?)
Freq slide curve?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="H/FixedFreq/chkFixed" to="H/FixedFreq" method="_on_chkFixed_toggled"]
[connection signal="value_changed" from="H/FixedFreq/txtHz" to="H/FixedFreq" method="_on_txtHz_value_changed"]
[connection signal="item_selected" from="H/FixedFreq/Presets" to="H/FixedFreq" method="_on_Presets_item_selected"]
[connection signal="pressed" from="H/FixedFreq/Presets" to="H/FixedFreq" method="_on_Presets_pressed"]
[connection signal="gui_input" from="H/FixedFreq/Slider" to="H/FixedFreq/Slider" method="_on_Slider_gui_input"]
[connection signal="gui_input" from="H/Dt2/Slider" to="H/Dt2/Slider" method="_on_Slider_gui_input"]
[connection signal="gui_input" from="H/Dt/Slider" to="H/Dt/Slider" method="_on_Slider_gui_input"]
